Fixed close btn not aligned properly , to the sidenav on mobile phone, fixed it by making the right padding 2rem to align with the sidenav li a button

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -245,6 +245,11 @@ img.menu-icon-img {
     text-transform: capitalize !important;
     padding: 0 2rem !important;
   }
+  .sidenav-close {
+    display: flex !important;
+    justify-content: flex-end !important;
+    padding: 1rem 2rem 2rem 0 !important ;
+  }
   .sidenav-btn-div {
     padding: 0 2rem;
   }
